--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,14 @@ plotly>=5.15.0
 scikit-learn>=1.3.0
 gensim>=4.3.0
 
+# Image processing
+Pillow>=9.0.0
+
+# Model serialization
+joblib>=1.3.0
+
+# Word cloud visualization
+wordcloud>=1.9.0
+
 # Utility
 tqdm>=4.65.0
