--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,13 @@
-# App framework
-streamlit>=1.35.0
-
-# Data processing
-pandas>=2.0.0
-numpy>=1.24.0
-scipy>=1.10.0
-
-# Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
-
-# Machine Learning / NLP
-scikit-learn>=1.3.0
-gensim>=4.3.0
-
-# Image processing
-Pillow>=9.0.0
-
-# Model serialization
-joblib>=1.3.0
-
-# Word cloud visualization
-wordcloud>=1.9.0
-
-# Utility
-tqdm>=4.65.0
+streamlit
+pandas
+numpy
+scipy
+matplotlib
+seaborn
+plotly
+scikit-learn
+gensim
+pillow
+joblib
+wordcloud
+tqdm
